--- a/SDL_SetWindowIcon.mediawiki
+++ b/SDL_SetWindowIcon.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_SetWindowIcon =
-Use this function to set the icon of a window.
+Use this function to set the icon for a window.
 
 
 == Syntax ==
@@ -17,7 +17,7 @@ void SDL_SetWindowIcon(SDL_Window*  window,
 |the window to change
 |-
 |'''icon'''
-|the icon for a window
+|the icon for the window
 |}
 
 == Code Examples ==
