update content - standard return value

--- a/SDL_CondWaitTimeout.mediawiki
+++ b/SDL_CondWaitTimeout.mediawiki
@@ -28,7 +28,7 @@ int SDL_CondWaitTimeout(SDL_cond*  cond,
 |}
 
 == Return Value ==
-Returns 0 if the condition variable is signaled, SDL_MUTEX_TIMEDOUT if the condition is not signaled in the allotted time, and ,,-1 on error,, ^a negative error code on failure^; call [[SDL_GetError]]() for more information.
+Returns 0 if the condition variable is signaled, SDL_MUTEX_TIMEDOUT if the condition is not signaled in the allotted time, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
