--- a/SDL_HapticNumEffects.mediawiki
+++ b/SDL_HapticNumEffects.mediawiki
@@ -18,7 +18,7 @@ int SDL_HapticNumEffects(SDL_Haptic* haptic)
 |}
 
 == Return Value ==
-Returns the number of effects the haptic device can store^or a negative error code on failure^,,, or -1 on error,,; call [[SDL_GetError]]() for more information.
+Returns the number of effects the haptic device can store or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
