--- a/SDL_ConvertAudio.mediawiki
+++ b/SDL_ConvertAudio.mediawiki
@@ -19,7 +19,7 @@ int SDL_ConvertAudio(SDL_AudioCVT* cvt)
 
 == Return Value ==
 
-Returns 0 if the conversion was completed successfully ,,,otherwise -1 is returned and,, ^or a negative error code on failure^; call [[SDL_GetError]]() for more information.
+Returns 0 if the conversion was completed successfully or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
