--- a/SDL_CreateRenderer.mediawiki
+++ b/SDL_CreateRenderer.mediawiki
@@ -25,7 +25,7 @@ int SDL_CreateRenderer(SDL_Window* window,
 |}
 
 == Return Value ==
-0 on success, -1 if there was an error creating the renderer; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
