--- a/SDL_SetSurfaceColorMod.mediawiki
+++ b/SDL_SetSurfaceColorMod.mediawiki
@@ -30,7 +30,9 @@ int SDL_SetSurfaceColorMod(SDL_Surface* surface,
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 if the surface is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+
+<<Color2(purple,If the surface is not valid it returns -1.)>>
 
 == Code Examples ==
 ```c++
