--- a/SDL_SetRelativeMouseMode.mediawiki
+++ b/SDL_SetRelativeMouseMode.mediawiki
@@ -18,7 +18,9 @@ int SDL_SetRelativeMouseMode(SDL_bool enabled)
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 if relative mode is not supported; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+
+<<Color2(purple,If relative mode is not supported this returns -1.)>>
 
 == Code Examples ==
 ```c++
