update content - standard return value

--- a/SDL_SaveBMP.mediawiki
+++ b/SDL_SaveBMP.mediawiki
@@ -22,7 +22,7 @@ int SDL_SaveBMP(SDL_Surface* surface,
 |}
 
 == Return Value ==
-Returns 0 if successful or -1 if there was an error; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
