update content - standard return value

--- a/SDL_RWclose.mediawiki
+++ b/SDL_RWclose.mediawiki
@@ -18,7 +18,9 @@ int SDL_RWclose(struct SDL_RWops* context)
 |}
 
 == Return Value ==
-Returns 0 if successful or -1 on write error when flushing data; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
+
+<<Color2(purple,If a write error occurs when flushing data it returns -1.)>>
 
 == Code Examples ==
 *
