--- a/SDL_QueryTexture.mediawiki
+++ b/SDL_QueryTexture.mediawiki
@@ -34,7 +34,7 @@ int SDL_QueryTexture(SDL_Texture* texture,
 |}
 
 == Return Value ==
-Returns 0 on success or -1 if the texture is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
