--- a/SDL_PeepEvents.mediawiki
+++ b/SDL_PeepEvents.mediawiki
@@ -37,7 +37,7 @@ int SDL_PeepEvents(SDL_Event*      events,
 |}
 
 == Return Value ==
-Returns the number of events actually stored, or -1 if there was an error; call [[SDL_GetError]]() for more information.
+Returns the number of events actually stored or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
