--- a/SDL_JoystickIsHaptic.mediawiki
+++ b/SDL_JoystickIsHaptic.mediawiki
@@ -18,7 +18,7 @@ int SDL_JoystickIsHaptic(SDL_Joystick* joystick)
 |}
 
 == Return Value ==
-Returns 1 if the joystick is haptic, 0 if it isn't, or -1 if an error ''occurred''; call [[SDL_GetError]]() for more information.
+Returns 1 if the joystick is haptic, 0 if it isn't, or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
