--- a/SDL_GetSurfaceBlendMode.mediawiki
+++ b/SDL_GetSurfaceBlendMode.mediawiki
@@ -22,7 +22,7 @@ int SDL_GetSurfaceBlendMode(SDL_Surface* surface,
 |}
 
 == Return Value ==
-Returns 0 on success, or -1 if the surface is not valid; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
