--- a/SDL_ConvertPixels.mediawiki
+++ b/SDL_ConvertPixels.mediawiki
@@ -46,7 +46,7 @@ int SDL_ConvertPixels(int         width,
 |}
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
