--- a/SDL_ConvertSurface.mediawiki
+++ b/SDL_ConvertSurface.mediawiki
@@ -26,7 +26,7 @@ SDL_Surface* SDL_ConvertSurface(SDL_Surface*     src,
 |}
 
 == Return Value ==
-Returns *a pointer to* the new surface, or NULL if ,,this function,, ^it^ fails; call [[SDL_GetError]]() for more information.
+Returns *a pointer to* the new surface or NULL if ,,this function,, ^it^ fails; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
