--- a/SDL_CreateTexture.mediawiki
+++ b/SDL_CreateTexture.mediawiki
@@ -29,7 +29,7 @@ SDL_Texture* SDL_CreateTexture(Uint32 format,
 |}
 
 == Return Value ==
-The created texture is returned, or 0 if no rendering context was active, the format was unsupported, or the width or height were out of range; call [[SDL_GetError]]() for more information. 
+Returns a pointer to the created texture or 0 if no rendering context was active, the format was unsupported, or the width or height were out of range; call [[SDL_GetError]]() for more information. 
 
 == Code Examples ==
 ```c++
