--- a/SDL_CreateWindowFrom.mediawiki
+++ b/SDL_CreateWindowFrom.mediawiki
@@ -17,7 +17,7 @@ SDL_Window* SDL_CreateWindowFrom(const void* data)
 |}
 
 == Return Value ==
-The ID of the window created, or 0 if window creation failed; call [[SDL_GetError]]() for more information.
+Returns the ID of the window created or 0 if window creation failed; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
