--- a/SDL_GetCPUCount.mediawiki
+++ b/SDL_GetCPUCount.mediawiki
@@ -12,7 +12,7 @@ int SDL_GetCPUCount(void)
 ```
 
 == Return Value ==
-Returns 0 on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns 0 on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
