--- a/SDL_GetWindowTitle.mediawiki
+++ b/SDL_GetWindowTitle.mediawiki
@@ -17,7 +17,7 @@ const char* SDL_GetWindowTitle(SDL_Window* window)
 |}
 
 == Return Value ==
-The title of the window in UTF-8 format or "" if there is no title.
+Returns the title of the window in UTF-8 format or "" if there is no title.
 
 == Code Examples ==
 ```c++
