--- a/SDL_HapticNumAxes.mediawiki
+++ b/SDL_HapticNumAxes.mediawiki
@@ -18,7 +18,7 @@ int SDL_HapticNumAxes(SDL_Haptic* haptic)
 |}
 
 == Return Value ==
-Returns the number of axes on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the number of axes on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
