--- a/SDL_HapticQuery.mediawiki
+++ b/SDL_HapticQuery.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_HapticQuery =
-Use this function to get the haptic devices ^device's?^ supported features in bitwise matter.
+Use this function to get the haptic ,,devices,, ^device's^ supported features in bitwise ,,matter,, ^manner^.
 
 
 == Syntax ==
@@ -19,18 +19,16 @@ unsigned int SDL_HapticQuery(SDL_Haptic* haptic)
 |}
 
 == Return Value ==
-Returns haptic features in bitwise manner (OR'd), or a negative error code on failure; call [[SDL_GetError]]() for more information. <<Color2(green,It seems there is probably a more clear way to describe this but I don't think I have enough info to make a specific suggestion on this one.)>>
+Returns ^a list of supported^ haptic features in bitwise manner (OR'd), or a negative error code on failure; call [[SDL_GetError]]() for more information. 
+
+<<Color2(green,It seems there is probably a more clear or complete way to describe this...  Is there a struct that should be Included here?  Maybe the [[SDL_HapticEffect]] union?)>>
 
 == Code Examples ==
 ```c++
-Example:
-\code
 if (SDL_HapticQueryEffects(haptic) & SDL_HAPTIC_CONSTANT) {
 printf("We have constant haptic effect!");
 }
-\endcode 
 ```
-<<Color2(green,Should \code and \endcode be removed from the example? Should the word Example also be removed?)>>
 
 == Remarks ==
 ''You can add useful comments here''
