--- a/SDL_HasAltiVec.mediawiki
+++ b/SDL_HasAltiVec.mediawiki
@@ -12,7 +12,7 @@ SDL_bool SDL_HasAltiVec(void)
 ```
 
 == Return Value ==
-Returns SDL_True if the CPU has Alti<code></code>Vec features, or SDL_False if not.
+Returns SDL_TRUE if the CPU has Alti<code></code>Vec features, or SDL_FALSE if not.
 
 == Code Examples ==
 ```c++
