--- a/SDL_HasIntersection.mediawiki
+++ b/SDL_HasIntersection.mediawiki
@@ -15,14 +15,14 @@ SDL_bool SDL_HasIntersection(const SDL_Rect* A,
 == Function Parameters ==
 {|
 |'''A'''
-|the first [[SDL_Rect]] to compare
+|a pointer to a rectangle of type [[SDL_Rect]]
 |-
 |'''B'''
-|the second [[SDL_Rect]] to compare
+|a pointer to another rectangle of type [[SDL_Rect]]
 |}
 
 == Return Value ==
-SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
+Returns SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
 
 == Code Examples ==
 ```c++
