--- a/SDL_HasMMX.mediawiki
+++ b/SDL_HasMMX.mediawiki
@@ -12,7 +12,7 @@ SDL_bool SDL_HasMMX(void)
 ```
 
 == Return Value ==
-Returns SDL_True if the CPU has MMX features, or SDL_False if not. 
+Returns SDL_TRUE if the CPU has MMX features or SDL_FALSE if not. 
 
 == Code Examples ==
 ```c++
