--- a/SDL_HasRDTSC.mediawiki
+++ b/SDL_HasRDTSC.mediawiki
@@ -12,7 +12,7 @@ SDL_bool SDL_HasRDTSC(void)
 ```
 
 == Return Value ==
-Returns SDL_True if the CPU has the RDTSC instruction, or SDL_False if not.
+Returns SDL_TRUE if the CPU has the RDTSC instruction or SDL_FALSE if not.
 
 == Code Examples ==
 ```c++
