--- a/SDL_HasSSE.mediawiki
+++ b/SDL_HasSSE.mediawiki
@@ -12,7 +12,7 @@ SDL_bool SDL_HasSSE(void)
 ```
 
 == Return Value ==
-Returns SDL_True if the CPU has SSE features, or SDL_False if not.
+Returns SDL_TRUE if the CPU has SSE features or SDL_FALSE if not.
 
 == Code Examples ==
 ```c++
