--- a/SDL_IntersectRect.mediawiki
+++ b/SDL_IntersectRect.mediawiki
@@ -16,17 +16,17 @@ SDL_bool SDL_IntersectRect(const SDL_Rect* A,
 == Function Parameters ==
 {|
 |'''A'''
-|the first [[SDL_Rect]] to calculate from
+|a pointer to a rectangle of type [[SDL_Rect]]
 |-
 |'''B'''
-|the second [[SDL_Rect]] to calculate from
+|a pointer to another rectangle of type [[SDL_Rect]]
 |-
 |'''result'''
-|the [[SDL_Rect]] that represents the intersection
+|a pointer to be filled with the rectangle of type [[SDL_Rect]] that represents the intersection of '''A''' and '''B'''
 |}
 
 == Return Value ==
-SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
+Returns SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
 
 == Code Examples ==
 ```c++
