--- a/SDL_IntersectRectAndLine.mediawiki
+++ b/SDL_IntersectRectAndLine.mediawiki
@@ -34,7 +34,7 @@ SDL_bool SDL_IntersectRectAndLine(const SDL_Rect* rect,
 |}
 
 == Return Value ==
-SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
+Returns SDL_TRUE if there is an intersection, SDL_FALSE otherwise.
 
 == Code Examples ==
 ```c++
