--- a/SDL_JoystickGetButton.mediawiki
+++ b/SDL_JoystickGetButton.mediawiki
@@ -22,7 +22,7 @@ Uint8 SDL_JoystickGetButton(SDL_Joystick* joystick,
 |}
 
 == Return Value ==
-^Returns 1 if the specified button is pressed, 0 otherwise.^*
+*<br/>Returns 1 if the specified button is pressed, 0 otherwise.<br/>*
 
 == Code Examples ==
 ```c++
