--- a/SDL_JoystickInstanceID.mediawiki
+++ b/SDL_JoystickInstanceID.mediawiki
@@ -18,7 +18,7 @@ int SDL_JoystickIndex(SDL_Joystick* joystick)
 |}
 
 == Return Value ==
-Returns the index of the specified joystick on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the index of the specified joystick on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
