--- a/SDL_JoystickNumBalls.mediawiki
+++ b/SDL_JoystickNumBalls.mediawiki
@@ -18,7 +18,7 @@ int SDL_JoystickNumBalls(SDL_Joystick* joystick)
 |}
 
 == Return Value ==
-Returns ^the number of trackballs^ on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns ^the number of trackballs^ on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
