--- a/SDL_JoystickNumHats.mediawiki
+++ b/SDL_JoystickNumHats.mediawiki
@@ -18,7 +18,7 @@ int SDL_JoystickNumHats(SDL_Joystick* joystick)
 |}
 
 == Return Value ==
-Returns ^the number of POV hats^ on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns ^the number of POV hats^ on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
