--- a/SDL_JoystickOpen.mediawiki
+++ b/SDL_JoystickOpen.mediawiki
@@ -18,7 +18,7 @@ SDL_Joystick* SDL_JoystickOpen(int device_index)
 |}
 
 == Return Value ==
-A joystick identifier, or NULL if an error occurred.
+Returns a joystick identifier or NULL if an error occurred.
 
 == Code Examples ==
 ```c++
