--- a/SDL_LoadBMP_RW.mediawiki
+++ b/SDL_LoadBMP_RW.mediawiki
@@ -22,7 +22,7 @@ SDL_Surface* SDL_LoadBMP_RW(SDL_RWops* src,
 |}
 
 == Return Value ==
-Returns the new surface or NULL if there was an error; call [[SDL_GetError]]() for more information.
+Returns a pointer to a new surface of type [[SDL_Surface]] or NULL if there was an error; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
