--- a/SDL_LoadWAV_RW.mediawiki
+++ b/SDL_LoadWAV_RW.mediawiki
@@ -33,7 +33,7 @@ SDL_AudioSpec* SDL_LoadWAV_RW(SDL_RWops*     src,
 |}
 
 == Return Value ==
-If this function succeeds, it returns the given [[SDL_AudioSpec]], filled with the audio data format of the wave data, fills '''audio_buf''' with a pointer to a malloc()'d buffer containing the audio data, and fills '''audio_len''' with a pointer to the length of that audio buffer, in bytes.
+If this function succeeds it returns the given [[SDL_AudioSpec]] filled with the audio data format of the wave data, fills '''audio_buf''' with a pointer to a malloc()'d buffer containing the audio data, and fills '''audio_len''' with a pointer to the length of that audio buffer (in bytes).
 
 This function returns NULL if the wave file cannot be opened, uses an unknown data format, or is corrupt; call [[SDL_GetError]]() for more information.  
 
