--- a/SDL_NumJoysticks.mediawiki
+++ b/SDL_NumJoysticks.mediawiki
@@ -12,7 +12,7 @@ int SDL_NumJoysticks(void)
 ```
 
 == Return Value ==
-Returns the number of attached joysticks on success, or a negative error code on failure; call [[SDL_GetError]]() for more information.
+Returns the number of attached joysticks on success or a negative error code on failure; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
